Fix distill dark mode again (#517)

--- a/_sass/_distill.scss
+++ b/_sass/_distill.scss
@@ -210,6 +210,10 @@ d-article {
       grid-column: toc-line;
     }
   }
+
+  d-footnote {
+    scroll-margin-top: 66px;
+  }
 }
 
 d-appendix {
